# rna-folding

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  boltz_handler.py  config.py  constants.py  drfold_handler.py  dvc_utils.py  main.py  pyproject.toml  template_modeler.py
.dvc/: config
configs/: config.yaml  inference.yaml  paths.yaml
configs/data/: default.yaml
configs/inference/: boltz.yaml  drfold.yaml
configs/logging/: mlflow.yaml
configs/model/: default.yaml
configs/preprocessing/: default.yaml
configs/serving/: mlflow_serving.yaml
configs/training/: default.yaml
data/: .gitignore  extended-rna.dvc  merged_labels_final.csv.dvc  merged_sequences_final.csv.dvc  rna-cif-to-csv.dvc  stanford-rna-3d-folding.dvc
data_processing/: __init__.py  dvc_utils.py  prepare_data.py
deployment/: convert_tensorrt.py  export_onnx.py
drfold_patches/: Cubic.py  DRfold_infer.py  Optimization.py  Selection.py  __init__.py  cfg_for_folding.json  cfg_for_selection.json  operations.py
handlers/: boltz_handler.py
inference/: __init__.py  register_model.py  serve.py
scripts/: __init__.py  boltz_inference.py  cif_to_csv.py  convert_tensorrt.py  export_onnx.py  main.py  prepare_data.py  register_model.py  serve.py
training/: __init__.py  data_module.py  lightning_model.py  train.py
